<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/formLabel"
            android:text="@string/loan_amount" />

        <EditText
            android:id="@+id/loan_amount"
            style="@style/formText"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/formLabel"
            android:text="@string/rate" />

        <EditText
            android:id="@+id/rate"
            style="@style/formText"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/formLabel"
            android:text="@string/tenure" />

        <EditText
            android:id="@+id/tenure"
            style="@style/formText"
            android:inputType="numberDecimal" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/trigger_calc"
            style="@style/button"
            android:text="@string/calculate_string" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/formLabel"
            android:text="@string/emi_amount" />

        <TextView
            android:id="@+id/emi_amount"
            style="@style/formText" />

    </LinearLayout>


</LinearLayout>